src/a12/net/directory.h

struct anet_dirsrv_opts {
	struct a12_context_options* a12_cfg;
	volatile bool flag_rescan;
	int basedir;
	struct appl_meta dir;
	size_t dir_count;
	bool allow_tunnel;
	bool discover_beacon;
	bool runner_process;
	char* allow_src;
	char* allow_dir;
	char* allow_appl;
	char* allow_ctrl;
	char* allow_ares;
	char* allow_admin;
	char* allow_monitor;
	char* resource_path;
	int resource_dfd;
	char* appl_server_path; 
	int appl_server_dfd;
	char* appl_server_datapath; 
	int appl_server_datadfd;
	char* appl_logpath;
	char* appl_server_temp_path;
	int appl_server_temp_dfd;
	int appl_logdfd;
};
struct anet_dircl_opts {
	int basedir;
	char basedir_path[PATH_MAX];
	char* appl_runner;
	char applname[18];    
	uint16_t applid;
	bool die_on_list;
	bool reload;           
	bool block_state;      
	bool block_log;        
	bool stderr_log;       
	bool keep_appl;        
	bool request_tunnel;   
	int monitor_mode;
	char ident[16]; 
	void (*dir_source)(struct a12_state*, struct a12_dynreq req, void* tag);
	void *dir_source_tag;
	uint16_t source_port;
	struct appl_meta outapp;
	bool outapp_ctrl;
	struct {
		char* name;
		char* path;
		char applname[16];
	} upload;
	struct {
		char* name;
		char* path;
		char applname[16];
	} download;
	void* (*allocator)(struct a12_state*, struct directory_meta*);
	pid_t (*executor)(struct a12_state*,
		struct directory_meta*, const char*, void* tag, int* inf, int* outf);
};
struct dircl;
struct dircl {
	int in_appl; 
	bool in_monitor;
	char identity[16]; 
	int type; 
	bool pending_stream;
	int pending_fd;
	uint16_t pending_id;
	arcan_event petname;
	arcan_event endpoint;
	intptr_t lua_cb;
	uint8_t pubk[32];
	bool authenticated;
	bool in_admin;
	bool dir_link;
	int admin_fdout;
	char message_multipart[1024];
	size_t message_ofs;
	void* userdata;
	struct shmifsrv_client* C;
	struct dircl* next;
	struct dircl* prev;
	struct dircl* tunnel;
};
struct global_cfg {
	bool soft_auth;
	bool no_default;
	bool probe_only;
	bool keep_alive;
	bool discover_synch; 
	size_t accept_n_pk_unknown;
	size_t backpressure;
	size_t backpressure_soft;
	int directory;
	struct anet_dirsrv_opts dirsrv;
	struct anet_dircl_opts dircl;
	struct anet_options meta;
	bool use_forced_remote_pubk;
	uint8_t forced_remote_pubk[32];
	char* trust_domain;
	char* path_self;
	char* outbound_tag;
	char* config_file;
	char* db_file;
};
struct dirlua_event {
	int kind;
	const char* msg;
};
void anet_directory_lua_event(struct dircl*, struct dirlua_event*);
void anet_directory_srv(
	struct a12_context_options*, struct anet_dirsrv_opts, int fdin, int fdout);
struct dircl* anet_directory_shmifsrv_thread(
	struct shmifsrv_client*, struct a12_state*, bool link);
void anet_directory_shmifsrv_set(struct anet_dirsrv_opts* opts);
void anet_directory_cl(
	struct a12_state* S, struct anet_dircl_opts opts, int fdin, int fdout);
struct a12_bhandler_res anet_directory_cl_bhandler(
	struct a12_state* S, struct a12_bhandler_meta M, void* tag);
void dircl_source_handler(
	struct a12_state* S, struct a12_dynreq req, void* tag);
bool build_appl_pkg(const char* name, struct appl_meta* dst, int dirfd);
bool extract_appl_pkg(FILE* fin, int dirfd, const char* basename, const char** msg);
FILE* file_to_membuf(FILE* applin, char** out, size_t* out_sz);
struct ioloop_shared;
struct ioloop_shared {
	int fdin;
	int fdout;
	int userfd;
	int userfd2;
	int wakeup;
	struct arcan_shmif_cont shmif;
	struct arcan_shmif_cont* handover;
	pthread_mutex_t lock;
	struct a12_state *S;
	volatile bool shutdown;
	struct directory_meta* cbt;
	void (*on_event)(
		struct arcan_shmif_cont* cont, int chid,
		struct arcan_event*, void*);
	bool (*on_directory)(struct ioloop_shared* S, struct appl_meta* dir);
	void (*on_userfd)(struct ioloop_shared* S, bool ok);
	void (*on_userfd2)(struct ioloop_shared* S, bool ok);
	void (*on_shmif)(struct ioloop_shared* S, bool ok);
	void* tag;
};
bool anet_directory_lua_init(struct global_cfg* cfg);
void anet_directory_lua_ready(struct global_cfg* cfg);
void anet_directory_lua_update(volatile struct appl_meta* appl, int newappl);
bool anet_directory_lua_admin_command(struct dircl* C, const char* msg);
void anet_directory_appl_runner();
void anet_directory_lua_unregister(struct dircl* C);
struct pk_response
	anet_directory_lua_register_unknown(
		struct dircl* C, struct pk_response base, const char* pubk);
void anet_directory_lua_register(struct dircl* C);
bool anet_directory_lua_spawn_runner(
	struct appl_meta* appl, bool external);
bool anet_directory_signal_runner(volatile struct appl_meta* appl, int no);
bool anet_directory_lua_join(struct dircl* C, struct appl_meta* appl);
bool anet_directory_lua_monitor(struct dircl* C, struct appl_meta* appl);
void anet_directory_lua_bchunk_completion(struct dircl* C, bool ok);
int anet_directory_lua_filter_source(struct dircl* C, arcan_event* ev);
void anet_directory_tunnel_thread(struct ioloop_shared* ios, uint8_t chid);
struct ioloop_shared* anet_directory_ioloop_current();
void anet_directory_ioloop(struct ioloop_shared* S);
void anet_directory_lua_trigger_auto(struct appl_meta* appl);
void dirsrv_global_lock(const char* file, int line);
void dirsrv_global_unlock(const char* file, int line);
bool anet_directory_merge_multipart(
	struct arcan_event* ev, struct arg_arr**, char**, int* err);
int anet_directory_link(
	const char* keytag,
	struct anet_options* netcfg,
	struct anet_dirsrv_opts srvcfg);
struct appl_meta* dir_unpack_index(int fd);
struct evqueue_entry;
struct evqueue_entry {
	struct arcan_event ev;
	struct evqueue_entry* next;
};
bool dir_request_resource(
	struct arcan_shmif_cont* C, size_t ns, const char* id, int mode,
	struct evqueue_entry* pending
);
struct dircl* dirsrv_find_cl_ident(int appid, const char* name);
bool dir_block_synch_request(
	struct arcan_shmif_cont* C, struct arcan_event outev,
	struct evqueue_entry* pending,
	int category_ok, int kind_ok,
	int category_fail, int kind_fail);
void dirsrv_set_source_mask(
	uint8_t pubk[static 32], int appid, char identity[static 16]);