src/frameserver/util/anet_helper.h

struct keystore_provider {
	union {
	struct {
		int dirfd;
		int statefd; 
	} directory;
	};
	int type;
};
struct anet_options {
	const char* cp;
	const char* host;
	const char* port;
	const char* key;
	bool ignore_key_host;
	const char* host_tag;
	const char petname[16];
	int sockfd;
	int mt_mode;
	int mode;
	int allow_n_keys;
	const char* redirect_exit;
	const char* devicehint_cp;
	ssize_t retry_count;
	struct keystore_provider keystore;
	struct a12_context_options* opts;
};
struct anet_cl_connection {
	int fd;
	struct a12_state* state;
	char* errmsg;
	bool auth_failed;
};
bool a12helper_keystore_tags(bool (*cb)(const char* petname, void*), void* tag);
bool a12helper_keystore_known_accepted_challenge(
	const uint8_t pubk[static 32],
	const uint8_t chg[static 8],
	bool (*on_beacon)(
		struct arcan_shmif_cont*,
		const uint8_t[static 32],
		const uint8_t[static 8],
		const char*,
		char*
	),
	struct arcan_shmif_cont*, char*
);
bool anet_listen(struct anet_options* args, char** errmsg,
	void (*dispatch)(struct a12_state* S, int fd, void* tag), void* tag);