src/a12/net/a12_helper.h

struct anet_discover_opts;
void a12helper_vbuffer_add_listener(
	struct frame_cache*, uintptr_t ref,
		bool raw, void (*trigger)(uintptr_t ref, uint8_t* buf, size_t buf_sz, int type));
void
	a12helper_listen_beacon(
		struct arcan_shmif_cont* C,
		struct anet_discover_opts* O,
		bool (*on_beacon)(
			struct arcan_shmif_cont* C,
			const uint8_t kpub[static 32],
			const uint8_t nonce[static 8],
			const char* tag,
			char* addr),
		void (*on_unknown)(char* addr),
		bool (*on_shmif)(struct arcan_shmif_cont* C)
	);
struct anet_discover_opts {
	int limit; 
	int timesleep; 
	const char* ipv6; 
	bool (*discover_beacon)(
		struct arcan_shmif_cont*,
		const uint8_t kpub[static 32],
		const uint8_t nonce[static 8],
		const char* tag, char* addr
	);
	void (*discover_unknown)(char* addr);
	struct ipcfg* IP; 
	bool (*on_shmif)(struct arcan_shmif_cont* C);
	struct arcan_shmif_cont* C;
};