src/a12/net/anet_types.zig


// Extern functions declared in directory.h.
pub extern "c" fn anet_directory_lua_event(C: ?*struct_dircl, ev: *struct_dirlua_event) void;
pub extern "c" fn anet_directory_lua_notify_source(
    A: ?*struct_appl_meta,
    name: [*c]const u8,
    msg: [*c]const u8,
    ref_id: usize,
) void;
pub extern "c" fn anet_directory_srv_scan(opts: *struct_anet_dirsrv_opts) void;
pub extern "c" fn anet_directory_srv_revert(slot: u16, steps: c_int, dmask: c_int) bool;
pub extern "c" fn anet_directory_srv(
    ctx: ?*struct_a12_context_options,
    opts: struct_anet_dirsrv_opts,
    fdin: c_int,
    fdout: c_int,
) void;
pub extern "c" fn anet_directory_shmifsrv_thread(
    cl: ?*struct_shmifsrv_client,
    S: ?*struct_a12_state,
    link_type: c_int,
) ?*struct_dircl;
pub extern "c" fn anet_directory_shmifsrv_set(opts: *struct_anet_dirsrv_opts) void;
pub extern "c" fn anet_directory_cl(
    S: ?*struct_a12_state,
    opts: struct_anet_dircl_opts,
    fdin: c_int,
    fdout: c_int,
) void;
pub extern "c" fn anet_directory_cl_bhandler(
    S: ?*struct_a12_state,
    M: struct_a12_bhandler_meta,
    tag: ?*anyopaque,
) struct_a12_bhandler_res;
pub extern "c" fn dircl_source_handler(
    S: ?*struct_a12_state,
    req: struct_a12_dynreq,
    tag: ?*anyopaque,
) void;
pub extern "c" fn dircl_apphash_cached(
    checksum: *[4]u8,
    prefix: ?[*:0]const u8,
    outname: *?[*:0]u8,
) c_int;
pub extern "c" fn dircl_xfer_complete(
    I: *struct_ioloop_shared,
    M: struct_a12_bhandler_meta,
) void;
pub extern "c" fn verify_appl_pkg(
    buf: [*]u8,
    buf_sz: usize,
    insig_pk: *[SIG_PUBK_SZ]u8,
    outsig_pk: *[SIG_PUBK_SZ]u8,
    errmsg: *?[*:0]const u8,
) ?[*:0]u8;
pub extern "c" fn build_appl_pkg(
    name: ?[*:0]u8,
    dst: *struct_appl_meta,
    dirfd: c_int,
    signtag: ?[*:0]const u8,
) bool;
pub extern "c" fn extract_appl_pkg(
    fin: ?*FILE,
    dirfd: c_int,
    basename: ?[*:0]const u8,
    msg: *?[*:0]const u8,
    manifest: *?*struct_arg_arr,
) bool;
pub extern "c" fn file_to_membuf(applin: ?*FILE, out: *?[*:0]u8, out_sz: *usize) ?*FILE;
pub extern "c" fn anet_directory_random_ident(dst: [*]u8, nb: usize) void;
pub extern "c" fn anet_lua_init(cfg: *struct_global_cfg) bool;
pub extern "c" fn anet_directory_lua_ready(cfg: *struct_global_cfg) void;
pub extern "c" fn anet_directory_lua_update(appl: ?*struct_appl_meta, newappl: c_int) void;
pub extern "c" fn anet_directory_lua_admin_command(C: ?*struct_dircl, msg: ?[*:0]const u8) bool;
pub extern "c" fn anet_directory_appl_runner() void;
pub extern "c" fn anet_directory_lua_unregister(C: ?*struct_dircl) void;
pub extern "c" fn anet_directory_lua_register_unknown(
    C: ?*struct_dircl,
    base: struct_pk_response,
    pubk: ?[*:0]const u8,
) struct_pk_response;
pub extern "c" fn anet_directory_lua_register(C: ?*struct_dircl) void;
pub extern "c" fn anet_directory_lua_spawn_runner(
    appl: ?*struct_appl_meta,
    external: bool,
) bool;
pub extern "c" fn anet_directory_signal_runner(appl: ?*struct_appl_meta, no: c_int) bool;
pub extern "c" fn anet_directory_lua_join(C: ?*struct_dircl, appl: ?*struct_appl_meta) bool;
pub extern "c" fn anet_directory_lua_monitor(C: ?*struct_dircl, appl: ?*struct_appl_meta) bool;
pub extern "c" fn anet_directory_lua_bchunk_completion(C: ?*struct_dircl, ok: bool) void;
pub extern "c" fn anet_directory_lua_filter_source(
    C: ?*struct_dircl,
    ev: ?*struct_arcan_event,
) c_int;
pub extern "c" fn anet_directory_lua_forced_source(C: ?*struct_dircl) bool;
pub extern "c" fn anet_directory_tunnel_thread(ios: *struct_ioloop_shared, chid: u8) void;
pub extern "c" fn anet_directory_ioloop_current() ?*struct_ioloop_shared;
pub extern "c" fn anet_directory_ioloop(S: *struct_ioloop_shared) void;
pub extern "c" fn anet_directory_lua_trigger_auto(appl: ?*struct_appl_meta) void;
pub extern "c" fn dirsrv_global_lock(file: ?[*:0]const u8, line: c_int) void;
pub extern "c" fn dirsrv_global_unlock(file: ?[*:0]const u8, line: c_int) void;
pub extern "c" fn anet_directory_merge_multipart(
    ev: ?*struct_arcan_event,
    out: ?*?*struct_arg_arr,
    outchar: ?*?[*:0]u8,
    err: ?*c_int,
) bool;
pub extern "c" fn anet_directory_link(
    keytag: ?[*:0]const u8,
    netcfg: *struct_anet_options,
    srvcfg: struct_anet_dirsrv_opts,
    ident: ?[*:0]const u8,
    reference: bool,
) c_int;
pub extern "c" fn dir_unpack_index(fd: c_int) ?*struct_appl_meta;
pub extern "c" fn dir_request_resource(
    C: ?*struct_arcan_shmif_cont,
    ns: usize,
    id: ?[*:0]const u8,
    mode: c_int,
    pending: ?*struct_evqueue_entry,
) bool;
pub extern "c" fn dirsrv_find_cl_ident(
    appid: c_int,
    name: ?[*:0]const u8,
    lock: bool,
) ?*struct_dircl;
pub extern "c" fn dir_block_synch_request(
    C: ?*struct_arcan_shmif_cont,
    outev: struct_arcan_event,
    pending: ?*struct_evqueue_entry,
    category_ok: c_int,
    kind_ok: c_int,
    category_fail: c_int,
    kind_fail: c_int,
) bool;
pub extern "c" fn dirsrv_set_source_mask(
    pubk: *[32]u8,
    appid: c_int,
    identity: *[16]u8,
    dstpubk: *[32]u8,
) void;
pub extern "c" fn dirsrv_build_report(appl: ?[*:0]const u8) c_int;
pub extern "c" fn dirsrv_flush_report(appl: ?[*:0]const u8) void;
pub extern "c" fn dirsrv_bchunk_req(
    C: ?*struct_dircl,
    ns: usize,
    ext: ?[*:0]u8,
    input: bool,
) void;
pub extern "c" fn dirsrv_bchunk_completion(C: ?*struct_dircl, ok: bool) void;
pub extern "c" fn dirsrv_opts() ?*struct_global_cfg;
pub extern "c" fn dirsrv_config() ?*struct_anet_dirsrv_opts;
pub extern "c" fn dirsrv_trace_state() ?*struct_a12_state;
pub extern "c" fn dirsrv_locked_numid_appl(id: u16) ?*struct_appl_meta;
pub extern "c" fn buf_memfd(buf: [*c]const u8, buf_sz: usize) c_int;
pub extern "c" fn anet_directory_ephemeral_source(
    id: u16,
    name: ?[*:0]const u8,
    dstname: ?[*:0]const u8,
    refid: usize,
) bool;
pub extern "c" fn anet_directory_dirsrv_exec_source(
    dst: ?*struct_dircl,
    applid: u16,
    ident: ?[*:0]const u8,
    exec: ?[*:0]u8,
    argv: ?*struct_arcan_strarr,
    envv: ?*struct_arcan_strarr,
) bool;
// anet_directory_lua_init — dir_lua.h, exported by dir_lua.zig.
// `L` is `lua_State*` (opaque to this module).
pub extern "c" fn anet_directory_lua_init(cfg: *struct_global_cfg, L: ?*anyopaque) void;
pub extern "c" fn anet_directory_lua_cfg(C: *struct_global_cfg, L: ?*anyopaque) void;
pub extern "c" fn anet_client_lua_cfg(C: *struct_global_cfg, L: ?*anyopaque) void;
pub extern "c" fn anet_client_lua_getpath(key: ?[*:0]const u8) ?[*:0]u8;

// dir_*(L) — Lua bindings exported by dir_lua.zig (dir_lua.h). Each accepts
// the Lua state as an opaque pointer; callers cast from lua.lua_State*.
pub extern "c" fn dir_write(L: ?*anyopaque) c_int;
pub extern "c" fn dir_endpoint(L: ?*anyopaque) c_int;
pub extern "c" fn dir_linkdirectory(L: ?*anyopaque) c_int;
pub extern "c" fn dir_refdirectory(L: ?*anyopaque) c_int;
pub extern "c" fn dir_launchtarget(L: ?*anyopaque) c_int;
pub extern "c" fn dir_matchkeys(L: ?*anyopaque) c_int;
pub extern "c" fn dir_storekey(L: ?*anyopaque) c_int;
pub extern "c" fn dir_getkey(L: ?*anyopaque) c_int;
pub extern "c" fn dir_flushreport(L: ?*anyopaque) c_int;
pub extern "c" fn dir_appllist(L: ?*anyopaque) c_int;
pub extern "c" fn dir_applrevert(L: ?*anyopaque) c_int;
pub extern "c" fn dir_ctrlrevert(L: ?*anyopaque) c_int;
pub extern "c" fn dir_launchresolver(L: ?*anyopaque) c_int;
pub extern "c" fn dir_applresolver(L: ?*anyopaque) c_int;
pub extern "c" fn dir_messagealias(L: ?*anyopaque) c_int;
pub extern "c" fn dir_hookresource(L: ?*anyopaque) c_int;

// ══════════════════════════════════════════════════════════════════════════════
// Section 4 — Compile-time layout sanity (best effort).
//   Extern structs whose size we expect from the C headers on x86_64 Linux.
// ══════════════════════════════════════════════════════════════════════════════

comptime {
    // keystore_provider: { int dirfd; int statefd; } anon-union + int type → 12 bytes.
    std.debug.assert(@sizeOf(struct_keystore_provider) == 12);
    // anet_cl_connection: int + ptr + ptr + bool (+pad) → 32 bytes on LP64.
    std.debug.assert(@sizeOf(struct_anet_cl_connection) == 32);
    // a12_dynreq: 46 + 32 + 2 + 12 + 4 + 32 = 128 bytes, with alignment.
    std.debug.assert(@sizeOf(struct_a12_dynreq) == 128);
    // pk_response: bool + 32 + 32 + ptr = 80 bytes.
    std.debug.assert(@sizeOf(struct_pk_response) == 80);
    // source_meta: 32 + 16 + 8 = 56.
    std.debug.assert(@sizeOf(struct_source_meta) == 56);
    // dirlua_event: int + ptr = 16 bytes (with padding).
    std.debug.assert(@sizeOf(struct_dirlua_event) == 16);
    // dircl_nameent: 3 ptrs + 16 = 16*3 bytes on LP64 = 48.
    std.debug.assert(@sizeOf(struct_dircl_nameent) == 40);
}
